--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | Mission 001 unity</title>
+    <title>Unity Web Player | words on screen</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Mission 001 unity</div>
+        <div id="unity-build-title">words on screen</div>
       </div>
     </div>
     <script>
@@ -52,16 +52,16 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/webgl_build_and_run_3rdPersonAsset_DECOMPRESSION_fallback_ON_Brotli.loader.js";
+      var loaderUrl = buildUrl + "/WebGL Gip Tick Unpack.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webgl_build_and_run_3rdPersonAsset_DECOMPRESSION_fallback_ON_Brotli.data.unityweb",
-        frameworkUrl: buildUrl + "/webgl_build_and_run_3rdPersonAsset_DECOMPRESSION_fallback_ON_Brotli.framework.js.unityweb",
-        codeUrl: buildUrl + "/webgl_build_and_run_3rdPersonAsset_DECOMPRESSION_fallback_ON_Brotli.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGL Gip Tick Unpack.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGL Gip Tick Unpack.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGL Gip Tick Unpack.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Mission 001 unity",
-        productVersion: "0.1",
+        productName: "words on screen",
+        productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
 
